Добавлены хендлеры: 1. Обновление исполнителя у инцидента 2. Статистика headmap по закрытым задачам 3. Хендлер для получения инцидентов по пользователям
