# app/alertservice/docs/swagger.json
@@ -242,6 +242,35 @@
         },
         "/api/v1/heatmap/all": {
             "get": {
+                "description": "При данном запросе AlertService возвращает список HeatmapToday (с числом открытых инцидентов и алертов) по каждому дню за прошедшие дни с первой даты, сохраненной в БД, до текущей даты.",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "heatmap"
+                ],
+                "summary": "Получение данных по созданным алертами и инцидентам за все прошедшие дни в виде списка по дням",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "array",
+                            "items": {
+                                "$ref": "#/definitions/entity.HeatmapToday"
+                            }
+                        }
+                    },
+                    "500": {
+                        "description": "Ошибка обработки алерта",
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                }
+            }
+        },
+        "/api/v1/heatmap/all/close": {
+            "get": {
                 "description": "При данном запросе AlertService возвращает список HeatmapToday по каждому дню  за прошедшие дни с первой даты, сохраненной в БД, до текущей даты.",
                 "produces": [
                     "application/json"
@@ -249,7 +278,7 @@
                 "tags": [
                     "heatmap"
                 ],
-                "summary": "Получение данных за все прошедшие дни в виде списка по дням",
+                "summary": "Получение данных по закрытым инцидентам за все прошедшие дни в виде списка по дням",
                 "responses": {
                     "200": {
                         "description": "OK",
@@ -406,6 +435,47 @@
                 }
             }
         },
+        "/api/v1/incidents/{incident_assigned}": {
+            "get": {
+                "description": "Вернёт все инциденты по исполнителю",
+                "tags": [
+                    "incidents"
+                ],
+                "summary": "Получение инцидентов по исполнителю",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Логин назначенного на инцидент пользователя",
+                        "name": "incident_assigned",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK"
+                    },
+                    "400": {
+                        "description": "Invalid incident ID or request body",
+                        "schema": {
+                            "type": "object",
+                            "additionalProperties": {
+                                "type": "string"
+                            }
+                        }
+                    },
+                    "500": {
+                        "description": "Internal server error",
+                        "schema": {
+                            "type": "object",
+                            "additionalProperties": {
+                                "type": "string"
+                            }
+                        }
+                    }
+                }
+            }
+        },
         "/api/v1/incidents/{incident_id}": {
             "get": {
                 "description": "Retrieve an incident by its ID",
@@ -433,7 +503,85 @@
                         }
                     }
                 }
-            },
+            }
+        },
+        "/api/v1/incidents/{incident_id}/alerts/count": {
+            "get": {
+                "description": "Вернет количество алертов по данногому инциденту (на данный момент у одного инцидента алерты с одним именем)",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "incidents"
+                ],
+                "summary": "Получение количества алертов для данного инцидента",
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "description": "Incident ID",
+                        "name": "incident_id",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK"
+                    }
+                }
+            }
+        },
+        "/api/v1/incidents/{incident_id}/assigned": {
+            "patch": {
+                "description": "Обновляет назначенного на инцидент пользователя",
+                "tags": [
+                    "incidents"
+                ],
+                "summary": "Обновлние назначенного на инцидент пользоватля",
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "description": "Incident ID",
+                        "name": "incident_id",
+                        "in": "path",
+                        "required": true
+                    },
+                    {
+                        "description": "Имя нового назначенного на инцидент пользователя",
+                        "name": "incident_assigned",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/v1.IncidentAssigned"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK"
+                    },
+                    "400": {
+                        "description": "Invalid incident ID or request body",
+                        "schema": {
+                            "type": "object",
+                            "additionalProperties": {
+                                "type": "string"
+                            }
+                        }
+                    },
+                    "500": {
+                        "description": "Internal server error",
+                        "schema": {
+                            "type": "object",
+                            "additionalProperties": {
+                                "type": "string"
+                            }
+                        }
+                    }
+                }
+            }
+        },
+        "/api/v1/incidents/{incident_id}/status": {
             "patch": {
                 "description": "Update an existing incident",
                 "tags": [
@@ -449,7 +597,7 @@
                         "required": true
                     },
                     {
-                        "description": "Новый статус. Используйте статусы из списка: Открыт, В работе, Решенный, Отклоненный.",
+                        "description": "Новый статус. Используйте статусы из списка: Создано, В работе, Решено, Отклонено.",
                         "name": "incident_status",
                         "in": "body",
                         "required": true,
@@ -479,32 +627,6 @@
                                 "type": "string"
                             }
                         }
-                    }
-                }
-            }
-        },
-        "/api/v1/incidents/{incident_id}/alerts/count": {
-            "get": {
-                "description": "Вернет количество алертов по данногому инциденту (на данный момент у одного инцидента алерты с одним именем)",
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "incidents"
-                ],
-                "summary": "Получение количества алертов для данного инцидента",
-                "parameters": [
-                    {
-                        "type": "integer",
-                        "description": "Incident ID",
-                        "name": "incident_id",
-                        "in": "path",
-                        "required": true
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "OK"
                     }
                 }
             }
@@ -693,11 +815,11 @@
                     "type": "string"
                 },
                 "count_alerts": {
-                    "description": "число алертов в диапазоне от BeginTime до EndTime",
+                    "description": "число созданных алертов в диапазоне от BeginTime до EndTime",
                     "type": "integer"
                 },
                 "count_incidents": {
-                    "description": "число инцидентов в диапазоне от BeginTime до EndTime",
+                    "description": "число созданных инцидентов в диапазоне от BeginTime до EndTime",
                     "type": "integer"
                 },
                 "date": {
@@ -870,6 +992,15 @@
                 },
                 "version": {
                     "type": "string"
+                }
+            }
+        },
+        "v1.IncidentAssigned": {
+            "type": "object",
+            "properties": {
+                "assigned": {
+                    "type": "string",
+                    "example": "user"
                 }
             }
         },
